--- a/hotel/templates/hotel/home.html
+++ b/hotel/templates/hotel/home.html
@@ -1,5 +1,4 @@
-<!-- hotel/templates/hotel/home.html -->
 {% extends 'base_generic.html' %}
 {% block content %}
-  <h2>Welcome to the Hotel Management System</h2>
+  <h2>Мини-отель</h2>
 {% endblock %}
