--- a/hotel/templates/hotel/register_user.html
+++ b/hotel/templates/hotel/register_user.html
@@ -1,9 +1,9 @@
 {% extends 'base_generic.html' %}
 {% block content %}
-  <h2>Register User</h2>
+  <h2>Регистрация пользователя</h2>
   <form method="post">
     {% csrf_token %}
     {{ form.as_p }}
-    <button type="submit">Register</button>
+    <button type="submit">Зарегистрировать</button>
   </form>
 {% endblock %}
