--- a/hotel/templates/hotel/user_list.html
+++ b/hotel/templates/hotel/user_list.html
@@ -1,16 +1,15 @@
-<!-- hotel/templates/hotel/user_list.html -->
 {% extends 'base_generic.html' %}
 {% block content %}
-  <h2>User List</h2>
+  <h2>Список пользователей</h2>
   <table>
     <thead>
       <tr>
-        <th>Username</th>
-        <th>First Name</th>
-        <th>Last Name</th>
-        <th>Father Name</th>
-        <th>Role</th>
-        <th>Status</th>
+        <th>Имя пользователя</th>
+        <th>Имя</th>
+        <th>Фамилия</th>
+        <th>Отчество</th>
+        <th>Должность</th>
+        <th>Статус</th>
       </tr>
     </thead>
     <tbody>
