--- a/hotel/templates/hotel/view_shifts.html
+++ b/hotel/templates/hotel/view_shifts.html
@@ -1,7 +1,6 @@
-<!-- hotel/templates/hotel/view_shifts.html -->
 {% extends 'base_generic.html' %}
 {% block content %}
-  <h2>Shifts</h2>
+  <h2>Смены</h2>
   <ul>
     {% for shift in shifts %}
       <li>{{ shift.user.username }}: {{ shift.start_time }} - {{ shift.end_time }}</li>
